fix pageHeader not showing issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,5 +3,8 @@
 
   &__main-content{
       height: calc(100% - 80px);
+      position: fixed;
+      right: 0;
+      left: 0;
   }
 }
